--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,9 @@
 name: deploy website
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -14,5 +17,4 @@ jobs:
           node-version: 16
       - run: npm install -g surge
       - run: make build
-      # surge public guild-avatar.surge.sh --token ${{ secrets.SURGE_TOKEN }}
       - run: surge public guild-avatar-stg.surge.sh --token ${{ secrets.SURGE_TOKEN }}
