--- a/.github/workflows/deploy-prd.yaml
+++ b/.github/workflows/deploy-prd.yaml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  pages: write       # Grant Pages access
+  id-token: write    # Necessary for the step that deploys to Github pages
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,3 +22,28 @@ jobs:
       - run: npm install -g surge
       - run: make build
       - run: surge public guild-avatar.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      
+      # Upload artifact to github pages
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./public
+
+  # Deploy github pages
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build  # This ensures the deploy step only runs after the build job succeeds
+
+    permissions:
+      pages: write
+      id-token: write
+
+    steps:
+    # Step 1: Download the previously uploaded artifact
+    - name: Download Pages artifact
+      uses: actions/download-pages-artifact@v1
+
+    # Step 2: Deploy to GitHub Pages
+    - name: Deploy to GitHub Pages
+      uses: actions/deploy-pages@v2
+
