Add overwrite: true
@see https://github.com/actions/upload-artifact/blob/main/docs/MIGRATION.md#overwriting-an-artifact

--- a/.github/workflows/deploy-prd.yaml
+++ b/.github/workflows/deploy-prd.yaml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
+          overwrite: true
 
   # Deploy github pages
   deploy:
